--- a/1.core/4.html.html
+++ b/1.core/4.html.html
@@ -1,7 +1,7 @@
 <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
 <script>
 $(() => {
-    console.log($('h1').html())
+    console.log($('h1').html()) 
 
     $('footer').html('<mark>foot</mark>')
     console.log($('footer').html())
@@ -30,6 +30,6 @@ $(() => {
 
 <footer></footer>
 
-<!-- 4열은 첫번째만 리턴-->
+<!-- 4열은 h1을 read하고 첫번째만 리턴-->
 <!-- 6열은 footer는 다 리턴-->
 <!-- 10열은 world가 hr로 바뀜, end는 chaining를 끝낸단 의미고, find의 li를 리턴하는 개념-->
