--- a/1.core/home/8.list.html
+++ b/1.core/home/8.list.html
@@ -1,9 +1,15 @@
 <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
 <script>
 $(() => {
-    $('<li>', {
-        html:'item'
-    }).clone(10).appendTo('ul')
+    /*
+   for(let i = 0; i < 10; i++)
+        $(`<li>item ${i}</li>`).appendTo('ul')
+    */
+   let items = []
+   for(let i  = 0; i < 10; i++)
+    items.push(`<li>item ${i}</li>`)
+
+    $(items.join('')).appendTo('ul')
 })
 </script>
 
