--- a/1.core/8.new.html
+++ b/1.core/8.new.html
@@ -3,10 +3,14 @@
 $(() => {
     $('<div>').appendTo('hr')
     
+    /*
     $('<div>', {
         html: '<p class="center">red</p>',
         class: 'red'
     }).appendTo('hr')
+    */
+    // 과제: 위 $() 파라미터를 하나로 줄여라.
+    $('<div class="red"><p class="center">red</p>').appendTo('hr')
 })
 </script>
 
