--- a/1.core/16.each.html
+++ b/1.core/16.each.html
@@ -9,7 +9,7 @@ $(() => {
     2 'c'
     */
    let arr = ['a', 'b', 'c']
-    $('li').each((i, e) => console.log(i, $(this).append()))
+    $('li').each((i, e) => console.log(i, $('li id').text()))
 })
 </script>
 
