--- a/1.core/15.size.html
+++ b/1.core/15.size.html
@@ -3,7 +3,7 @@
 $(() => {
     let h1 = $('h1')
 
-    console.log(h1.width(), h1.height())
+    console.log(h1.width(), h1.height()) //따로 지정 않는 한 컨텐트박스의 크기
 
     h1.width('5rem')
     h1.height('5rem')
