--- a/1.core/home/20.phone.html
+++ b/1.core/home/20.phone.html
@@ -2,7 +2,10 @@
 <script>
 $(() => {
     // 과제: 전화번호를 숫자만으로 정제하라.
-    console.log($('form :input').val().replaceAll('-',''))
+    //console.log($(':input').val().replaceAll('-',''))
+   // $('input').val($('input').val().split('-').join(''))
+    $('input').val($('input').val().replaceAll('-',''))
+    //$('input').val($('input').val().repalce(/-/g,''))
 
 })
 </script>
