--- a/1.core/21.replace.html
+++ b/1.core/21.replace.html
@@ -1,3 +1,4 @@
+<!--2022-08-29-->
 <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
 <script>
 $(() => {
@@ -10,20 +11,20 @@ $(() => {
     log(greet.replace(/^\s|\s$/g, ''))
 
     greet = '1-2-3,4,5'
-    console.log(greet.replace(/-/g,''))
-    console.log(greet.replace(/,/g,''))
-    console.log(greet.replace(/[-,]/g,''))
+    console.log(greet.replace(/-/g, ''))
+    console.log(greet.replace(/,/g, ''))
+    console.log(greet.replace(/[-,]/g, ''))
 
     greet = '1-,2-,3'
-    console.log(greet.replace(/-,/g,''))
+    console.log(greet.replace(/-,/g, ''))
 
     greet = 'hello\nworld'
     console.log(greet)
-    console.log(greet.replace(/\n/g,''))
+    console.log(greet.replace(/\n/g, ''))
 })
 
 function log(str) {
-    console.log('|' + str + "|")
+    console.log('|' + str + '|')
 }
 </script>
 
