--- a/강사님.hr.bootstrap - 복사본.html
+++ b/강사님.hr.bootstrap - 복사본.html
@@ -9,15 +9,30 @@
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.6.3/css/all.css'/>
 <script>
     $(() => {
-        let cnt = 1
+        let cnt = 1;
+
         $('#add').click(() => {
-            $(`<tr>
+            
+            var laborerName = $('#laborerName').val();
+            let hireDate = $('#hire-date').val();
+            
+            if(0 == laborerName.length || laborerName.length > 6){
+                alert('사용자명은 1자 이상, 5자 이하로 입력하세요.')
+            }
+
+            else if(hireDate == 0) {
+                alert('입사일을 입력하세요.')
+            }
+
+            else {                
+                $(`<tr>
                 <td><input type='radio'/></td>
                 <td>${cnt++}</td>
-                <td>${$(':text').val()}</td>
+                <td>${$('#laborerName').val()}</td>
                 <td>${$('#hire-date').val()}</td>
-                </tr>`).appendTo('tbody')
-        })
+                </tr>`).appendTo('tbody')}
+
+        }).submit()
     })
     </script>
 <body>
@@ -34,7 +49,7 @@
             <form>
                 <div class='row mb-3'>
                     <div class='col-2'>
-                        <input type='text' class='form-control' placeholder='노동자명'/>
+                        <input type='text' class='form-control' id="laborerName" placeholder='노동자명'/>
                     </div>
                     <div class='col-4'>
                         <input type='date' class='form-control' id='hire-date'/>
