--- a/강사님.hr.bootstrap - 복사본 copy.html
+++ b/강사님.hr.bootstrap - 복사본 copy.html
@@ -9,21 +9,25 @@
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.6.3/css/all.css'/>
 <script>
     var model = new Array(0);
-    var laborer = function(_id, _name, _hireDate) {
-        this.id = _id;
-        this.name = _name;
+    let cnt = 1;
+    var Laborer = function(_name, _hireDate) {
+        this.id = cnt++;
+        this.laborerName = _name;
         this.hireDate = _hireDate;
     }
-
     var listOutPrint = function() {
+
         if (model.length < 1) {
             $("#laborerList").html("<tr><td colspan='3'>노동자가 없습니다.</td></tr>");
         } else {
+
             $("#laborerList").html("");
             $(model).each(
                     function(index, item) {
                         $("#laborerList").append(
-                                "<tr><td>" + item.id + "</td><td>" + item.name
+                                "<tr><td>" + "<input type='radio' name='choice'/>"
+                                + "</td><td>" + item.id
+                                + "</td><td>" + item.laborerName
                                 + "</td><td>" + item.hireDate
                                 + "</td></tr>");
                     });
@@ -31,56 +35,39 @@
     }
 
     $(() => {
-        let cnt = 1;
+        listOutPrint();
 
         $('#add').click(() => {
-            var laborerName = $('#laborerName').val();
-            let hireDate = $('#hire-date').val();
 
-
-            if(0 == laborerName.length || laborerName.length > 6){
-                alert('사용자명은 1자 이상, 5자 이하로 입력하세요.')
+            if (0 == $('#laborerName').val().length) {
+                alert('노동자명을 입력하세요.')
             }
 
-            else if(hireDate == 0) {
+            else if(0 == $('#hireDate').val()) {
                 alert('입사일을 입력하세요.')
             }
-
-            else {    
-                $(`<tr>
-                <td><input type='radio' name='choice'/></td>
-                <td>${cnt++}</td>
-                <td>${$('#laborerName').val()}</td>
-                <td>${$('#hire-date').val()}</td>
-                </tr>`).appendTo('tbody')
-            }
-
-            if ($("#name").val().length < 2) {
-                $("#nameHelper").text("이름을 입력하시오");
-            }
             
-            else if ($("#address").val().length < 2) {
-                $("#nameHelper").text("");
-                $("#ageHelper").text("");
-                $("#addressHelper").text("주소를 입력하시오");
-                            } else {
-                                //                 console.log("else....");
-                                $("#nameHelper").text("");
-                                $("#ageHelper").text("");
-                                $("#addressHelper").text("");
- 
-                                // 현재는 바로 보여주는 것이지만 
-                                // 이곳에 DB에 연결하기 위해서 server쪽으로 보내서 처리한다.
-                                model.push(new Student($("#name").val(), $(
-                                        "#age").val(), $("#address").val()));
-                                console.log(model.length);
-                                listOutPrint();
-                            }
-
+            else {
+                model.push(new Laborer($("#laborerName").val(), $("#hireDate").val()));
+                console.log(model.length);
+                listOutPrint();
+                }
         })
 
         $('#update').click(() => {
-            $(':checked').find('td:eq(2)').html('miji')
+
+            if (0 == $('#laborerName').val().length) {
+                alert('노동자명을 입력하세요.')
+            }
+
+            else if(0 == $('#hireDate').val()) {
+                alert('입사일을 입력하세요.')
+            }
+
+            else if($(':checked').find('td').eq(1).val() == model.id) {
+                    model.laborerName = $("#laborerName").val();
+                    model.hireDate = $("#hireDate").val();
+                } listOutPrint();
         })
     
 
@@ -107,7 +94,7 @@
                         <input type='text' class='form-control' id="laborerName" maxlength='4' placeholder='노동자명'/>
                     </div>
                     <div class='col-4'>
-                        <input type='date' class='form-control' id='hire-date'/>
+                        <input type='date' class='form-control' id='hireDate'/>
                     </div>
                     <div class='col'>
                         <nav class='d-flex'>
