--- a/1.core/5.appendTo.html
+++ b/1.core/5.appendTo.html
@@ -1,9 +1,9 @@
 <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
 <script>
 $(() => {
-    //$('div').appendTo($('hr'))
+    $('div').appendTo($('hr'))
     // 과제: 위를 append()로 refactoring 하라.
-    $('hr').append($('div'))
+    //$('hr').append($('div'))
 })
 </script>
 
