--- a/강사님.hr.jquery.html
+++ b/강사님.hr.jquery.html
@@ -61,7 +61,7 @@ function init() {
             let laborer = {
                 laborerId: ++laborerId,
                 name: $('#laborerName').val(),
-                hireDate: $('#hireDate').val(),
+                hireDate: $('#hireDate').val()
             }
             laborers.push(laborer)
             listLaborers()
@@ -83,7 +83,7 @@ function init() {
                     }
                 })
             listLaborers()
-        }
+         }
     })
     
     //노동자 삭제
