--- a/복습5.hr.jquery.html
+++ b/복습5.hr.jquery.html
@@ -6,7 +6,122 @@
 <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
 <link rel='stylesheet'href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'/>
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.6.3/css/all.css'/>
+<script>
+const laborers = []
+let laborerId = 0
 
+function isVal(field) {
+    let isGood = false
+    let errMsg
+
+    if(!field.length) errMsg = '노동자를 선택하세요.'
+    else {
+        if(!field.val()) errMsg = field.attr('placeholder') + '을 입력하세요.'
+        else isGood = true
+    }
+
+    if(!isGood) {
+        $('#modalMsg').text(errMsg).css('color', 'red')
+        $('#modalBtn').hide()
+        $('#modal').modal()
+    }
+
+    return isGood
+}
+
+function listLaborers() {
+    $('input').not(':radio').val('')
+    $('#laborers').empty()
+
+    if(laborers.length) {
+        const laborerArr = []
+
+        $.each(laborers, (i, laborer) => {
+            laborerArr.unshift(
+                `<tr>
+                    <td><input type='radio' name='laobrerId' id='laborerId'
+                                value='${laborer.laborerId}'/></td>
+                    <td>${laborer.laborerId}</td>
+                    <td>${laborer.name}</td>
+                    <td>${laborer.hireDate}</td>
+                </tr>`
+            )
+        })
+
+        $('#laborers').append(laborerArr.join(''))
+    }else $('#laborers').append(
+        "<tr><td colspan='4' class='text-center'>노동자가 없습니다.</td></tr>"
+    )
+}
+
+function init() {
+    $('#addLaborerBtn').click(() => {
+        if(isVal($('#laborerName')) && isVal($('#hireDate'))) {
+            let laborer = {
+                laborerId: ++laborerId,
+                name: $('#laborerName').val(),
+                hireDate: $('#hireDate').val()
+            }
+            laborers.push(laborer)
+            listLaborers()
+        }
+    })
+
+    $('#fixLaborerBtn').click(() => {
+        if(isVal($('#laborerId:checked')) &&
+            isVal($('#laborerName')) && isVal($('#hireDate'))) {
+                let laborerId = $('#laborerId:checked').val()
+
+                $.each(laborers, (i, laborer) => {
+                    if(laborer.laborerId == laborerId){
+                        laborer.name = $('#laborerName').val()
+                        laborer.hireDate = $('#hireDate').val()
+                        return false
+                    }
+                })
+            listLaborers()
+        }
+    })
+    $('#delLaborerBtn').click(() => {
+        if(isVal($('#laborerId:checked'))) {
+            $('#modalMsg').text('노동자를 삭제하시겠습니까?')
+            $('#modalBtn').show()
+            $('#modal').modal()
+        }
+    })
+    $('#delLaborerOkBtn').click(() => {
+        let laborerId = $('#laborerId:checked').val()
+
+        $.each(laborers, (i, laborer) => {
+            if(laborer.laborerId == laborerId) {
+                laborers.splice(i, 1)
+                return false
+            }
+        })
+
+        $('#modal').modal('hide')
+        listLaborers()
+    })
+
+    $('#laborers').on({
+        change() {
+            $('#laborerName').val($(this).parent().next().next().text())
+            $('#hireDate').val($(this).parent().next().next().next().text())
+        }
+    }, '#laborerId')
+}
+$(init)
+</script>
+<style>
+#hireDate::before {
+    content: attr(placeholer);
+    width: 100%;
+}
+
+#hireDate:focus::before, #hireDate:valid::before {
+    display: none;
+}
+</style>
 <body>
 <div class='container'>
     <div class='row'>
