--- a/강사님.hr.jquery.html
+++ b/강사님.hr.jquery.html
@@ -114,7 +114,7 @@
     </script>
     <style>
     #hireDate::before {
-        content: attr(placeholer);
+        content: attr(placeholder);
         width: 100%;
     }
     
